# auto-trading-journal

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh  stock_type_cache.json  test_main.py
config/: config.yaml  config.yaml.example
docs/: foreign_stock_design.md  prd.md  todo.md
docs/done/: 10_v2_prd.md  10_v2_todo.md  11_v2_implementation.md  11_v2_prd.md  11_v2_todo.md  1_dashboard_implementation.md  1_dashboard_prd.md  1_dashboard_todo.md  3_dashboard_implementation.md  3_dashboard_prd.md  3_format_implementation.md  3_format_prd.md  4_dashboard_todo.md  4_err_prd.md  4_err_todo.md  issue-3_bug.md  issue-5_bug.md
docs/start/: 10_v2_implementation.md  10_v2_todo.md  1_critical_implementation.md  1_critical_prd.md  1_critical_todo.md  1_dashboard_todo.md  2_samsung_implementation.md  2_samsung_prd.md  2_samsung_todo.md  3_dashboard_todo.md  3_format_todo.md  4_dashboard_implementation.md  4_dashboard_prd.md  4_dashboard_todo.md  4_err_implementation.md  4_err_todo.md
docs/superpowers/plans/: 2026-05-23-domestic-ticker-enrichment.md
docs/superpowers/specs/: 2026-05-23-domestic-ticker-enrichment-design.md
input/미래에셋증권/: IRP.csv  ISA.csv  국내계좌.csv  연금저축1.csv  연금저축2.csv  주식2.csv  주식3.csv  해외주식1.csv
input/한국투자증권/: 국내계좌.csv
modules/: __init__.py  data_validator.py  file_parser.py  google_sheets_client.py  models.py  parser_registry.py  report_generator.py  sector_classifier.py  sheet_manager.py  sheet_writer.py  stock_classifier.py  summary_generator.py  symbol_master.py  test_foreign.py  test_sheet_manager.py  trade_models.py
modules/parsers/: __init__.py  base_parser.py  hankook_parser.py  mirae_parser.py
sample/미래에셋증권/: 해외계좌.csv
stocks/: IRP 국내.md  ISA 국내.md  계좌1 국내.md  계좌1 해외.md  계좌2 국내.md  연금 국내.md
stocks/sample/미래에셋증권/: 국내계좌.csv  (+1 more)
tests/: test_dashboard_charts.py  test_enrichment.py  test_parsers.py  test_rate_limit.py  test_sheet_reader.py  test_summary_format.py  test_summary_insights.py  test_summary_monthly_trend.py  test_symbol_master.py
