[project]
name = "auto-trading-journal"
version = "2.0.0"
description = "증권사별 CSV 파일을 파싱하여 구글 시트에 매매일지를 자동 작성하는 도구"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kenshin579" }
]

dependencies = [
    # Google Sheets API
    "google-api-python-client>=2.108.0",
    "google-auth>=2.23.4",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",

    # 설정
    "pyyaml>=6.0.1",

    # OpenAI (섹터 분류)
    "openai>=1.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.3",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.setuptools]
packages = ["modules", "modules.parsers"]
